--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,62 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* Use this file to manipulate bootstrap css */
+/* Navbar START */
+.gradient {
+  background: var(--primary-gradient-color) !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.row {
+  width: 412px !important;
 }
+
+.gradient .links {
+  color: #fff;
+  position: relative;
+  left: 347px;
+}
+
+.gradient .links:hover {
+  text-decoration: underline;
+  color: #fff;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+  color: #fff !important;
+}
+/* .nav-links {
+  padding: 0.5rem 17rem !important;
+} */
+
+.nav-item {
+  display: flex;
+  flex-direction: row;
+}
+
+.navbar-logo {
+  font-size: 1.5rem !important;
+  font-weight: bold;
+}
+
+.search-bar {
+  width: auto !important;
+  position: relative;
+  left: 87px;
+  width: 500px !important;
+  padding: 0.375rem 5.75rem !important;
+}
+.search-select {
+  width: auto !important;
+  position: absolute;
+  /* left: 364px; */
+  margin-left: 86px;
+  z-index: 100;
+}
+
+.search-button {
+  width: 80px;
+  height: 40px;
+  margin-left: 56px;
+  z-index: 100;
+  background: var(--primary-gradient-color) !important;
+}
+
+/* Navbar END */
