Media queries of max width 992

--- a/client/src/mediaQueries.css
+++ b/client/src/mediaQueries.css
@@ -1,3 +1,17 @@
+@media screen and (max-width: 991.98px) {
+  .row {
+    flex-wrap: wrap !important;
+  }
+
+  /* Hero */
+
+  .hero .hero-img {
+    position: relative;
+    left: 10%;
+    top: 25px;
+  }
+}
+
 @media screen and (max-width: 890px) {
   /* navbar */
   .gradient .links {
