--- a/client/src/mediaQueries.css
+++ b/client/src/mediaQueries.css
@@ -5,52 +5,70 @@
   .form-control-width {
     width: 335px !important;
   }
-
-  /* Hero */
-
-  .hero .hero-text {
-    width: 452px;
+  .search-select {
+    visibility: hidden;
   }
 
-  .hero .hero-img {
-    position: relative;
-    left: 10%;
-    top: 25px;
-  }
-}
-
-@media screen and (max-width: 890px) {
-  /* navbar */
-  .gradient .links {
-    left: 0px;
-  }
   .search-form {
-    right: 120px;
+    position: relative;
+    right: 108px;
+    bottom: 20px;
+    width: 50%;
   }
+
   .search-button {
     position: relative;
-    left: 300px;
+    left: 340px;
     bottom: 40px;
   }
   .search-bar {
     width: auto !important;
     position: relative;
-    left: 117px;
-    width: 300px !important;
+    left: 20px;
+    width: 320px !important;
     padding: 0.375rem 0.3rem !important;
   }
-  .search-select {
-    visibility: hidden;
+  .button-mobile {
+    margin-top: 15px !important;
+    /* margin-left: 22% !important; */
+  }
+
+  /* Hero */
+
+  .hero .hero-text {
+    width: 452px;
+    /* margin: auto; */
+  }
+
+  .hero .hero-img {
+    position: relative;
+    left: 0;
+    top: 25px;
+    padding: 15px 0;
+    width: 350px;
+  }
+  .signup-btn {
+    position: relative;
+    left: 146px !important;
   }
   .signin-btn {
     position: relative;
-    bottom: 20px;
+    bottom: 11px;
     width: 350px !important;
+    left: 4px;
+  }
+  .gradient .links {
+    left: 0px;
+  }
+}
+
+@media screen and (max-width: 890px) {
+  /* navbar */
+  /* .gradient .links {
+    left: 0px;
   }
 
-  .signup-btn {
-    position: relative;
-    bottom: 10px;
-    width: 350px !important;
-  }
+  .search-select {
+    visibility: hidden;
+  } */
 }
