--- a/client/src/mediaQueries.css
+++ b/client/src/mediaQueries.css
@@ -32,6 +32,10 @@
     margin-top: 15px !important;
     /* margin-left: 22% !important; */
   }
+  .nav-footer {
+    position: relative;
+    left: 35px !important;
+  }
 
   /* Hero */
 
