--- a/client/src/App.css
+++ b/client/src/App.css
@@ -120,7 +120,7 @@ textarea {
 }
 
 .card-primary-color-btn {
-  width: 400px !important;
+  width: 245px !important;
   /* margin-left: 17px !important;
   margin-bottom: 6px !important; */
   background-color: var(--primary-color) !important;
@@ -130,6 +130,9 @@ textarea {
   box-shadow: var(--drop-shadow) !important;
   color: var(--white-color) !important;
   font-weight: bold !important;
+  position: relative;
+  bottom: 20px !important;
+  align-self: center !important;
 }
 
 .card-primary-color-btn:hover {
