--- a/client/src/App.css
+++ b/client/src/App.css
@@ -161,6 +161,10 @@ textarea {
   top: 20px !important;
 }
 
+.bottom-3 {
+  bottom: 3px !important;
+}
+
 .left-20 {
   position: relative;
   margin-left: 50px !important;
