--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,6 +24,16 @@
   color: #fff !important;
 }
 
+/* dropdown */
+.dropdown-menu-dark {
+  color: #dee2e6;
+  background-color: var(--primary-color) !important;
+  border: 2px solid rgba(0, 0, 0, 0.15) !important;
+}
+.dropdown-menu[data-bs-popper] {
+  left: 107px !important;
+}
+
 .nav-item {
   display: flex;
   flex-direction: row;
