--- a/client/src/App.css
+++ b/client/src/App.css
@@ -183,6 +183,11 @@ textarea {
   position: relative;
   margin-left: 70px !important;
 }
+
+.margin-left-149 {
+  margin-left: 149px !important;
+}
+
 .left120 {
   position: relative;
   left: 120px !important;
