--- a/client/src/index.css
+++ b/client/src/index.css
@@ -53,10 +53,10 @@
   position: relative;
   left: 20px;
   width: 450px !important;
-  padding: 0.375rem 5.75rem !important;
+  padding: 0.375rem 8.75rem !important;
 }
 .search-select {
-  width: 90px !important;
+  width: auto !important;
   position: relative;
   right: 2px;
   top: 38px;
@@ -210,7 +210,7 @@
 }
 
 .card {
-  height: 380px !important;
+  height: 420px !important;
   width: 401px;
 }
 
