--- a/client/src/index.css
+++ b/client/src/index.css
@@ -154,6 +154,17 @@
   margin-left: 20%;
 }
 
+.title-modal-applied {
+  margin-left: 31%;
+}
+
+.modal-applied-p {
+  margin-left: 7%;
+  color: var(--header-color);
+  font-weight: 400;
+  width: 430px !important;
+}
+
 .modal-header-p {
   margin-left: 15%;
   color: var(--header-color);
