--- a/client/src/App.css
+++ b/client/src/App.css
@@ -273,6 +273,9 @@ textarea {
 .width-450 {
   width: 450px !important;
 }
+.width-396 {
+  width: 396px !important;
+}
 
 .width-308 {
   width: 308px !important;
