added nav.pill .nav-link.active for tabs

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -262,3 +262,9 @@
 .height-footer .links {
   width: 200px !important;
 }
+
+/* Account Settings */
+.nav-pills .nav-link.active {
+  text-decoration: underline !important;
+  color: var(--primary-color) !important;
+}
