--- a/client/src/App.css
+++ b/client/src/App.css
@@ -293,6 +293,10 @@ textarea {
   width: 720px !important;
 }
 
+.width-794 {
+  width: 794px !important;
+}
+
 .width-308 {
   width: 308px !important;
 }
