--- a/client/src/map.css
+++ b/client/src/map.css
@@ -11,19 +11,6 @@
   padding-top: 4px;
 }
 
-@media (max-width: 768px) {
-  .map-container {
-    width: 47.2% !important;
-  }
-}
-
-@media (max-width: 425px) {
-  .result-map-container {
-    position: absolute !important;
-    width: 100% !important;
-  }
-  .map-container {
-    right: 0;
-    width: 40% !important;
-  }
+.map-name {
+  font-size: var(--font-size-18);
 }
