--- a/client/src/App.css
+++ b/client/src/App.css
@@ -200,6 +200,10 @@ textarea {
   top: 20px !important;
 }
 
+.top-80 {
+  top: 80px !important;
+}
+
 .bottom-3 {
   bottom: 3px !important;
 }
@@ -304,6 +308,10 @@ textarea {
   width: 320px !important;
 }
 
+.width-265 {
+  width: 265px !important;
+}
+
 /* Height */
 
 .height-auto {
@@ -315,6 +323,9 @@ textarea {
 }
 .height60 {
   height: 60px !important;
+}
+.height120 {
+  height: 300px !important;
 }
 
 /* social icons */
