--- a/client/src/App.css
+++ b/client/src/App.css
@@ -213,6 +213,10 @@ textarea {
   margin-left: 50px !important;
 }
 
+.margin-left-142 {
+  margin-left: 142px;
+}
+
 .margin-left-negative {
   margin-left: -9px !important;
 }
